# uncertainty-toolbox

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_grayskull.py  setup.py
docs/: acknowledgments.md  conf.py  deep_uncertainty_papers.md  glossary.md  index.rst  installation.rst  metrics.md  paper_list.md  quick_start.rst
docs/_static/css/: custom.css
docs/api_reference/: data.rst  index.rst  metrics.rst  metrics_accuracy.rst  metrics_calibration.rst  metrics_scoring_rule.rst  recalibration.rst  utils.rst  viz.rst
examples/: 01_synth_sine.py  quick_start.py  viz_logo.py  viz_minimal.py  viz_readme_figures.py  viz_recalibrate.py  viz_recalibrate_opt_std.py  viz_recalibrate_readme.py  viz_recalibrate_std.py  viz_synth_sine.py
examples/plotly/: README.md  requirements_plotly.txt  viz_minimal_plotly.py  viz_synth_sine_plotly.py
examples/tutorial/: data_generation.py  pnn.py
neatplot/: __init__.py  matplotlibrc  matplotlibrc_fonts
requirements/: requirements.txt  requirements_dev.txt
shell/: add_pwd_to_pythonpath.sh  format_black.sh  run_all_tests.sh
tests/: __init__.py  test_data.py  test_metrics.py  test_metrics_accuracy.py  test_metrics_calibration.py  test_metrics_quantiles.py  test_metrics_scoring_rule.py  test_recalibration.py  test_utils.py  test_viz.py
tutorial/: Untitled.ipynb  pnn_model.py
uncertainty_toolbox/: __init__.py  data.py  matplotlibrc  meta.yaml  metrics.py  metrics_accuracy.py  metrics_calibration.py  metrics_calibration_quantile.py  metrics_deprecated.py  metrics_quantile_models.py  metrics_scoring_rule.py  recalibration.py  utils.py  viz.py
