[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "uncertainty_toolbox"
authors = [
    {name = "Willie Neiswanger", email = "willie.neiswanger@gmail.com"},
    {name = "Youngseog Chung"},
    {name = "Ian Char"},
    {name = "Han Guo"},
    ]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]
dynamic = ["version", "description"]

requires-python = ">=3.6"

dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "matplotlib>=3.2.2",
    "scikit-learn>=0.23.1",
    "shapely>=1.6.4.post2",
    "tqdm>=4.54.0",
    "pytest>=5.4.3",
    "black>=19.10b0",
]

[project.urls]
Home = "https://github.com/uncertainty-toolbox/uncertainty-toolbox"
