[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "uncertainty-toolbox"
authors = [
    {name = "Willie Neiswanger"},
    {name = "Youngseog Chung"},
    {name = "Ian Char"},
    {name = "Han Guo"},
    {email = "willie.neiswanger@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]

requires-python = ">=3.6"

dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "matplotlib>=3.2.2",
    "scikit-learn>=0.23.1",
    "shapely>=1.6.4.post2",
    "tqdm>=4.54.0",
    "pytest>=5.4.3",
    "black>=19.10b0",
]

[tool.flit.module]
name = "uncertainty_toolbox"

[project.urls]
Home = "https://uncertainty-toolbox.github.io/"
Github = "https://github.com/uncertainty-toolbox/uncertainty-toolbox"
Documentation = "https://uncertainty-toolbox.github.io/docs/"
