[build-system]
requires = ["flit_core >=3.2,<4", "setuptools"]
build-backend = "flit_core.buildapi"

[project]
name = "uncertainty-toolbox"
authors = [
    {name = "Willie Neiswanger"},
    {name = "Youngseog Chung"},
    {name = "Ian Char"},
    {name = "Han Guo"},
    {email = "willie.neiswanger@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description", "dependencies"]

requires-python = ">=3.6"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}

[tool.flit.module]
name = "uncertainty_toolbox"

[project.urls]
Home = "https://uncertainty-toolbox.github.io/"
Github = "https://github.com/uncertainty-toolbox/uncertainty-toolbox"
Documentation = "https://uncertainty-toolbox.github.io/docs/"
